--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = "3.12.6"
 elasticsearch = {extras = ["async"], version = "^8.15.1"}
 pydantic-settings = "^2.6.1"
+pytest-asyncio = "^0.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
