--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "3.12.6"
 elasticsearch = {extras = ["async"], version = "^8.15.1"}
 pydantic-settings = "^2.6.1"
 pytest-asyncio = "^0.24.0"
+fastapi = "^0.115.4"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -21,6 +22,8 @@ ruff = "^0.7.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
+httpx = "^0.27.2"
+uvicorn = "^0.32.0"
 
 
 [tool.pytest.ini_options]
